tests/ui/panic-handler/panic-handler-bad-signature-5.stderr
error[E0308]: mismatched types
  --> $DIR/panic-handler-bad-signature-5.rs:9:1
   |
LL | fn panic(info: &PanicInfo<'static>) -> !
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected signature `fn(&PanicInfo<'_>) -> _`
              found signature `fn(&PanicInfo<'static>) -> _`
note: the anonymous lifetime as defined here...
  --> $SRC_DIR/core/src/panicking.rs:LL:COL
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
